2011-01-27  vadim  <vadim@netcitadel.com>

	* IOSImporterRun.cpp (run): see #1931 "Update failed import
	behavior". Added meaningful error messages for when policy
	importer fails to create firewall object or does not create
	interface objects or any rules.

	* Rule.cpp (removeRef): fixes #1997 "add removeRef and addRef
	methods to class NATRule". Now undo and redo correctly remove and
	restore references to NAT rule sets in NAT rules with action
	Branch.

	* Rule.cpp (addRef): fixes #1991 "Undo does not restore object as
	a parameter of policy rule action Branch or Tag after it was
	deleted deleted". Now Undo restores references to rule sets and tag
	services as arguments of corresponding policy rules, as well as
	references to objects configured as interface network zones.

	* Interface.cpp (removeRef): fixes #1987 "Deleting object that is
	used as Network Zone for ASA/PIX interface results in inconsistent
	behavior". When an object that is used as a network zone of an
	interface is deleted, it should be removed from the interface
	configuration as well.

	* Cluster.cpp (init): fixes #1995 "Crash when compiling a cluster
	with identical firewalls". Method Cluster::init() must call base
	class method Firewall::init() to get child Policy, NAT and Routing
	objects created.

	* CompilerDriver_pix_run.cpp (run): fixes #1994 "Crash when
	compiling a firewall in an imported Library". Compilers should
	reset any read-only flags in the copy of object tree they work
	with before they make any modifications.

2011-01-26  vadim  <vadim@netcitadel.com>

	* ProjectPanel_events.cpp (event): see #1994 "Crash when compiling
	a firewall in an imported Library". To prevent crash, added check
	to make sure firewall object is not read-only before an attempt to
	update its "last compiled" or "last installed" timestamp.

	* ProjectPanel_file_ops.cpp (fileExport): fixes #1993 "V4.2 on
	Windows - export Library shows the file type as Firewall Builder
	2"
